--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -246,34 +246,34 @@ body {
   margin-bottom: 12px; }
 
 .ph-line:nth-of-type(1) {
-  width: 93%; }
+  width: 71%; }
 
 .ph-line:nth-of-type(2) {
-  width: 83%; }
-
-.ph-line:nth-of-type(3) {
-  width: 77%; }
-
-.ph-line:nth-of-type(4) {
-  width: 81%; }
-
-.ph-line:nth-of-type(5) {
-  width: 74%; }
-
-.ph-line:nth-of-type(6) {
-  width: 93%; }
-
-.ph-line:nth-of-type(7) {
-  width: 77%; }
-
-.ph-line:nth-of-type(8) {
   width: 99%; }
 
+.ph-line:nth-of-type(3) {
+  width: 75%; }
+
+.ph-line:nth-of-type(4) {
+  width: 78%; }
+
+.ph-line:nth-of-type(5) {
+  width: 99%; }
+
+.ph-line:nth-of-type(6) {
+  width: 90%; }
+
+.ph-line:nth-of-type(7) {
+  width: 91%; }
+
+.ph-line:nth-of-type(8) {
+  width: 98%; }
+
 .ph-line:nth-of-type(9) {
-  width: 81%; }
+  width: 87%; }
 
 .ph-line:nth-of-type(10) {
-  width: 92%; }
+  width: 72%; }
 
 .ph-header {
   margin-bottom: 8px;
@@ -310,9 +310,9 @@ body {
   .ph-image-paragraph .ph-line:nth-of-type(3) {
     margin-left: 88px; }
   .ph-image-paragraph .ph-line:nth-of-type(1) {
-    width: calc(91% - 88px); }
+    width: calc(79% - 88px); }
   .ph-image-paragraph .ph-line:nth-of-type(2) {
-    width: calc(99% - 88px); }
+    width: calc(97% - 88px); }
   .ph-image-paragraph .ph-line:nth-of-type(3) {
     width: calc(90% - 88px); }
   .ph-image-paragraph .ph-lines {
@@ -565,11 +565,6 @@ html {
   margin-top: 32px;
   padding: 8px 64px; }
 
-.hero__button:focus + .get-started {
-  transform: scaleY(1);
-  height: 150px;
-  opacity: 1; }
-
 .get-started {
   margin-top: 24px;
   transform: scaleY(0);
@@ -577,6 +572,11 @@ html {
   height: 0;
   opacity: 0;
   transition: 0.3s transform, 0.3s height, 0.3s opacity; }
+
+.get-started--active {
+  transform: scaleY(1);
+  height: 150px;
+  opacity: 1; }
 
 .get-started__info {
   color: white;
