--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -246,34 +246,34 @@ body {
   margin-bottom: 12px; }
 
 .ph-line:nth-of-type(1) {
-  width: 71%; }
+  width: 83%; }
 
 .ph-line:nth-of-type(2) {
-  width: 99%; }
+  width: 77%; }
 
 .ph-line:nth-of-type(3) {
-  width: 75%; }
+  width: 73%; }
 
 .ph-line:nth-of-type(4) {
-  width: 78%; }
+  width: 88%; }
 
 .ph-line:nth-of-type(5) {
-  width: 99%; }
-
-.ph-line:nth-of-type(6) {
-  width: 90%; }
-
-.ph-line:nth-of-type(7) {
   width: 91%; }
 
+.ph-line:nth-of-type(6) {
+  width: 78%; }
+
+.ph-line:nth-of-type(7) {
+  width: 75%; }
+
 .ph-line:nth-of-type(8) {
-  width: 98%; }
+  width: 82%; }
 
 .ph-line:nth-of-type(9) {
   width: 87%; }
 
 .ph-line:nth-of-type(10) {
-  width: 72%; }
+  width: 100%; }
 
 .ph-header {
   margin-bottom: 8px;
@@ -310,11 +310,11 @@ body {
   .ph-image-paragraph .ph-line:nth-of-type(3) {
     margin-left: 88px; }
   .ph-image-paragraph .ph-line:nth-of-type(1) {
-    width: calc(79% - 88px); }
+    width: calc(73% - 88px); }
   .ph-image-paragraph .ph-line:nth-of-type(2) {
-    width: calc(97% - 88px); }
+    width: calc(77% - 88px); }
   .ph-image-paragraph .ph-line:nth-of-type(3) {
-    width: calc(90% - 88px); }
+    width: calc(74% - 88px); }
   .ph-image-paragraph .ph-lines {
     display: flex;
     flex-direction: column;
@@ -618,7 +618,8 @@ html {
 .nav__menu {
   height: 100%;
   width: 49px;
-  z-index: 1; }
+  z-index: 1;
+  transition: 0.3s transform; }
 
 .nav__bar {
   height: 3px;
@@ -642,14 +643,17 @@ html {
   transform-origin: bottom left;
   transition: 0.3s transform; }
 
-.nav__menu--active .nav__bar--1 {
-  transform: translate(-8px, 1px) rotate(-45deg); }
-
-.nav__menu--active .nav__bar--2 {
-  transform: rotate(45deg); }
-
-.nav__menu--active .nav__bar--3 {
-  transform: translate(8px, -1px) rotate(-45deg); }
+.nav__menu--active {
+  transform: translateX(64px); }
+  @media (max-width: 460px) {
+    .nav__menu--active {
+      transform: translateX(0); } }
+  .nav__menu--active .nav__bar--1 {
+    transform: translate(-8px, 1px) rotate(-45deg); }
+  .nav__menu--active .nav__bar--2 {
+    transform: rotate(45deg); }
+  .nav__menu--active .nav__bar--3 {
+    transform: translate(8px, -1px) rotate(-45deg); }
 
 .nav__close-area {
   position: fixed;
@@ -667,11 +671,10 @@ html {
   top: 0;
   right: 0;
   height: 100vh;
-  width: 500px;
+  width: 300px;
   max-width: 90vw;
-  background: linear-gradient(to right, #71D5D3, #40ADA3);
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
-  padding: 64px;
+  background: #282828;
+  padding: 48px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -686,7 +689,8 @@ html {
 .nav__drawer--active {
   transform: scaleX(1); }
   .nav__drawer--active .nav__close-area {
-    pointer-events: all; }
+    pointer-events: all;
+    opacity: 1; }
   .nav__drawer--active .nav__links {
     opacity: 1; }
   .nav__drawer--active .nav__socials {
@@ -701,20 +705,21 @@ html {
   justify-content: flex-start;
   opacity: 0;
   transition: 0.3s opacity;
-  list-style: none; }
+  list-style: none;
+  padding: 0; }
 
 .nav__header {
   color: white;
   font-size: 30px;
-  font-family: Open Sans;
+  font-family: Roboto;
   font-weight: 600;
   margin: 24px 0; }
 
 .nav__link {
   text-decoration: none;
   color: white;
-  font-size: 24px;
-  font-family: Roboto;
+  font-size: 20px;
+  font-family: Open Sans;
   font-weight: 300;
   margin-bottom: 8px; }
 
