--- a/docs/sass/hero.sass
+++ b/docs/sass/hero.sass
@@ -4,7 +4,7 @@
 @import ../../config/breakpoints
   
 .hero
-  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
+  background: linear-gradient(to bottom, $color-blue-3, $color-blue-2)
   z-index: 2
   position: relative
   padding: $spacing-8 $spacing-2
@@ -35,7 +35,7 @@
     font-size: $font-size-4
 
 .hero__button
-  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
+  background: linear-gradient(to bottom, $color-blue-3, $color-blue-2)
   border: 2px solid white
   font-family: Open Sans
   font-weight: $font-weight-light
