--- a/docs/sass/nav.sass
+++ b/docs/sass/nav.sass
@@ -21,7 +21,7 @@
 .nav__background
   width: 100vw
   height: 70px
-  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
+  background: linear-gradient(to bottom, $color-blue-3, $color-blue-2)
   position: fixed
   top: 0
   left: 0
