--- a/docs/sass/footer.sass
+++ b/docs/sass/footer.sass
@@ -4,7 +4,7 @@
   display: flex
   align-items: center
   justify-content: space-evenly
-  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
+  background: linear-gradient(to bottom, $color-blue-3, $color-blue-2)
   +media($breakpoint-sm)
     flex-direction: column
 
