--- a/components/alert.sass
+++ b/components/alert.sass
@@ -7,31 +7,26 @@
   margin: $spacing-3
   border-radius: 5px
 
-.alert-light
-  border: 1px solid $color-neutral-4
-  color: $color-neutral-2
-
 .alert-dark
-  background-color: $color-neutral-6
-  border: 1px solid $color-neutral-3
+  background: linear-gradient(to bottom left, $color-neutral-1, $color-neutral-2)
+  color: white
+
+.alert-light
+  background: linear-gradient(to bottom left, $color-neutral-5, $color-neutral-6)
   color: $color-neutral-0
 
 .alert-blue
-  background-color: $color-blue-6
-  border: 1px solid $color-blue-3
-  color: $color-blue-0
+  background: linear-gradient(to bottom left, $color-blue-1, $color-blue-2)
+  color: white
 
 .alert-green
-  background-color: $color-green-6
-  border: 1px solid $color-green-3
-  color: $color-green-0
+  background: linear-gradient(to bottom left, $color-green-1, $color-green-2)
+  color: white
 
 .alert-orange
-  background-color: $color-orange-6
-  border: 1px solid $color-orange-3
-  color: $color-orange-0
+  background: linear-gradient(to bottom left, $color-orange-1, $color-orange-2)
+  color: white
 
 .alert-red
-  background-color: $color-red-6
-  border: 1px solid $color-red-3
-  color: $color-red-0
+  background: linear-gradient(to bottom left, $color-red-1, $color-red-2)
+  color: white
